--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "^3.0.1"
+    "html2canvas": "^1.4.1"
+    "jspdf": "^2.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
