--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "axios": "^0.19.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "^3.0.1"
-    "html2canvas": "^1.4.1"
+    "react-scripts": "^3.0.1",
+    "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1"
   },
   "scripts": {
